<resources>
    <string name="app_name">Ex_04_07</string>

    <string name="text_view1">Jamie Lidell</string>
    <string name="text_view2">Jamie Lidell - 11 songs 2013</string>

    <string name="text_list1">1. Dance Together</string>
    <string name="text_list2">2. Big Love</string>
    <string name="text_list3">3. What A Shame</string>
    <string name="text_list4">4. Do Yourself A Favor</string>
    <string name="text_list5">5. You Naked</string>
    <string name="text_list6">6. Blaming Something</string>
    <string name="text_list7">7. Why Ya Why</string>
    <string name="text_list8">8. So Cold</string>
    <string name="text_list9">9. What We Did</string>
    <string name="text_list10">10. Nice To Be So Cool</string>

    <string name="transition_photo">transition_photo</string>


</resources>
